fix(rte): allow overflow

--- a/client/src/components/RichText/RichTextEditor.module.scss
+++ b/client/src/components/RichText/RichTextEditor.module.scss
@@ -34,7 +34,7 @@
   .editor {
     padding: 0 0.5rem 1rem 0.5rem;
     height: 280px;
-    overflow: hidden;
+    // overflow: hidden;
   }
 
   .toolbar {
